@@ -1,0 +1,2 @@
+prog: tmxx
+vgopts: -q
